# pySigma-backend-jsonata

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/jsonata/: __init__.py  jsonata.py
sigma/pipelines/jsonata/: __init__.py  jsonata.py
tests/: test_backend_jsonata.py  test_backend_jsonata_correlations.py  test_pipelines_jsonata.py
